add splash styles and icons

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Daily Bread Delivery</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+      </style>
   </head>
   <body>
     <div id="root"></div>
