--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Daily Bread Delivery</title>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-      </style>
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <style>@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');</style>
   </head>
   <body>
     <div id="root"></div>
