--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,7 @@
     <title>Daily Bread Delivery</title>
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link rel="icon" href="/images/favicon.ico?" type="image/x-icon">
     <style>@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');</style>
   </head>
   <body>
