--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Bringing artisan bread straight to your home">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="David Lee Griffin">
+    <meta name="image" content="https://github.com/davidleegriffin/daily-bread-delivery/blob/main/splash-page-photo.jpg?raw=true"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Bread Delivery</title>
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
