--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Bringing artisan bread straight to your home">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="David Lee Griffin">
-    <meta name="image" content="https://images.unsplash.com/photo-1509440159596-0249088772ff?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
+    <meta name="image" content="/images/splash-page-photo.jpg"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Bread Delivery</title>
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
