--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix=”og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Bringing artisan bread straight to your home">
+    <meta property="og:url" content="https://daily-bread-delivery.herokuapp.com" />
+    <meta property="og:title" content="Daily Bread Delivery" />
+    <meta name="description" property="og:description" content="Bringing artisan bread straight to your home">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="David Lee Griffin">
-    <meta name="image" content="https://unsplash.com/photos/rsWZ-P9FbQ4">
+    <meta name="image"  property="og:image" content="%PUBLIC_URL%/splash-page-photo.jpg" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Bread Delivery</title>
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
