--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" property="og:description" content="Bringing artisan bread straight to your home">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="David Lee Griffin">
-    <meta name="image"  property="og:image" content="%PUBLIC_URL%/images/splash-page-photo.jpg" >
+    <meta name="image"  property="og:image" content="%PUBLIC_URL%/images/DBD-screenshot.png" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Bread Delivery</title>
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
